[package]
name = "rig-qdr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
fastembed = "4.4.0"
qdrant-client = "1.13.0"
rig-core = "0.7.0"
rig-qdrant = "0.1.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
